--- a/EXPRESS JS/Middleware/views/about.ejs
+++ b/EXPRESS JS/Middleware/views/about.ejs
@@ -1,5 +1,9 @@
-
-<h1>Hello, ini halaman about!</h1>
-
-
-  
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <img src="img/main.jpg" alt="Muhammad Fadil" class="img-thumbnail rounded-circle" width="200px">
+            <h1 class="display-4">Muhammad Fadil</h1>
+            <p class="lead">Student - Junior Programmer</p>
+        </div>
+    </div>
+</div>
